--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@
         @apply border-border outline-none;
     }
     body {
-        @apply bg-background text-foreground;
+        @apply bg-background text-foreground custom-scrollbar;
     }
 }
 
