--- a/src/index.css
+++ b/src/index.css
@@ -106,15 +106,24 @@
     .h2-medium {
         @apply text-[30px] font-medium leading-[140%] tracking-tighter;
     }
+    .h2-regular {
+        @apply text-[30px] font-light leading-[140%] tracking-tighter;
+    }
 
     .h3-medium {
         @apply text-[24px] font-medium leading-[140%] tracking-tighter;
     }
-    .h4-medium {
-        @apply text-[20px] font-medium leading-[140%] tracking-tighter;
-    }
     .h3-bold {
         @apply text-[24px] font-bold leading-[140%] tracking-tighter;
+    }
+    .h3-semibold {
+        @apply text-[24px] font-semibold leading-[140%] tracking-tighter;
+    }
+    .h3-regular {
+        @apply text-[24px] font-normal leading-[140%] tracking-tighter;
+    }
+    .h4-medium {
+        @apply text-[20px] font-medium leading-[140%] tracking-tighter;
     }
 
     .base-semibold {
@@ -186,6 +195,9 @@
     .remove-arrow {
         -moz-appearance: textfield;
     }
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
 
     .custom-scrollbar::-webkit-scrollbar {
         width: 3px;
@@ -247,7 +259,7 @@
         @apply text-white !important;
     }
     .shad-textarea {
-        @apply h-28 p-2 bg-dark-4 rounded-xl border-none focus-visible:ring-1 focus-visible:ring-offset-1 ring-offset-light-3 resize-none overflow-x-auto custom-scrollbar !important;
+        @apply h-28 p-2 bg-dark-4 rounded-xl border-none focus-visible:ring-1 placeholder:text-light-4 focus-visible:ring-offset-1 ring-offset-light-3 resize-none overflow-x-auto custom-scrollbar !important;
     }
 
     /* Button */
@@ -256,13 +268,13 @@
     }
 
     .shad-button_primary-outlined {
-        @apply bg-transparent border border-primary-500/80 hover:border-primary-600 text-primary-500 hover:text-primary-600 flex gap-2 w-full h-12 !important;
+        @apply bg-transparent border border-primary-500/80 hover:border-primary-600 text-primary-500 hover:text-primary-600 flex gap-2 w-max !important;
     }
     .shad-button_danger-outlined {
         @apply bg-transparent border border-red-500/80 hover:border-red-600 text-red-500 hover:text-red-600 flex gap-2 h-12 !important;
     }
     .shad-button_primary-disabled {
-        @apply bg-primary-500/30 text-light-2 flex gap-2 w-full h-12 cursor-not-allowed !important;
+        @apply bg-primary-500/30 text-light-2 flex gap-2 w-max h-12 cursor-not-allowed !important;
     }
 
     .shad-button_dark_4 {
